[metadata]
name = symbol-lightapi
version = 0.0.5
author = Symbol Contributors
author_email = contributors@symbol.dev
description = Symbol Light API
long_description = file: README.md
keywords = symbol, symbollightapi, lightapi, Symbol Light API
license = MIT
classifiers =
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
url = https://github.com/symbol/product/tree/main/python/lightapi

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.9
